<resources>
    <string name="accessToken">pk.eyJ1IjoidXRhbm93IiwiYSI6ImNpazRjdW5ibTAwMnV1YWtzOTQ0cDVydGoifQ.J2q2cX4MrC_j9yhaXMN_8Q</string>
    <string name="app_name">UTA Now</string>
    <string name="facebook_app_id">1625138201105249</string>
    <string name="facebook_token">fb_token</string>
    <string name="no_token">no_token</string>

    <string name="dashboard">dashboard</string>
    <string name="event_details">Event Details</string>

    <!-- jus for testing -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, est ut tincidunt at, pede felis in wisi pede. Do praesent. Inceptos pede cillum tristique amet, id tempor nam ac augue, mauris diam, pede etiam odio ultricies. Nullam duis, urna at, malesuada risus dignissim, dictum blandit diam mollis.</string>

    <!-- add comment -->
    <string name="add_comment">Join the conversation</string>

    <!-- Drawer -->
    <string name="bookmarks">Bookmarks</string>
    <string name="organizations">Organizations</string>
    <string name="createEvent">Create Event</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Activity Titles -->
    <string name="title_activity_book_marks">Bookmarks</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_organizations">Organizations</string>
    <string name="title_activity_splash">Splash</string>

    <!-- Menu -->
    <string name="action_menu">menu</string>

    <!-- Buttons -->
    <string name="going">I\'m Going</string>
    <string name="map">Map</string>

    <!-- text link -->
    <string name="view_comments">Click here to view the rest of the comments</string>
    <string name="title_activity_comments">CommentsActivity</string>

</resources>

