<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/favorites"/>

        <item android:id="@+id/organizations"
            android:icon="@drawable/ic_group_24dp"
            android:title="@string/organizations"/>

        <item android:id="@+id/createEvent"
            android:icon="@drawable/ic_event_24dp"
            android:title="@string/createEvent" />

        <item android:id="@+id/settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings" />

        <item android:id="@+id/logOut"
            android:icon="@drawable/ic_exit_to_app_24dp"
            android:title="@string/logOut" />
    </group>
</menu>